-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.2
-
None
-
973ae5e0f60d335d1b22f9a2418fe50839d50322
With GStreamer as playback backend, try to play the attached playlist with a simple QtMultimedia application. The app will SIGSEV at:
#0 QMediaPlaylist::next (this=0x0) at playback/qmediaplaylist.cpp:636
#1 0x426d9a40 in QMediaPlayerPrivate::_q_handlePlaylistLoaded (this=0x44419240) at playback/qmediaplayer.cpp:431
#2 0x426da7b0 in QMediaPlayer::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/moc_qmediaplayer.cpp:343
#3 0x411f486c in QMetaObject::activate (sender=0x413844ec <(anonymous namespace)::Q_QGS_customTypesLock::innerFunction()::holder>, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3479
#4 0x426dd474 in QMediaPlaylist::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/moc_qmediaplaylist.cpp:183
#5 0x411f486c in QMetaObject::activate (sender=0x42707708, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3479
#6 0x411f486c in QMetaObject::activate (sender=0x200000, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3479
#7 0x426e5be0 in QPlaylistFileParserPrivate::_q_handleParserFinished (this=<optimized out>) at playback/playlistfileparser.cpp:494
#8 0x426ea978 in QPlaylistFileParserPrivate::_q_handleData (this=0x44440400) at playback/playlistfileparser.cpp:467
#9 0x426eace8 in QPlaylistFileParser::start (this=0x444404cc, request=..., utf8=<optimized out>) at playback/playlistfileparser.cpp:576
#10 0x426d5934 in QMediaNetworkPlaylistProviderPrivate::load (this=0x444404c8, request=...) at playback/qmedianetworkplaylistprovider.cpp:68
#11 0x426dd9ec in QMediaPlaylist::load (this=0x44440438, request=..., format=0x0) at playback/qmediaplaylist.cpp:455
#12 0x426d91ec in QMediaPlayerPrivate::loadPlaylist (this=0x44419240) at playback/qmediaplayer.cpp:381
#13 0x426da7e4 in QMediaPlayer::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/moc_qmediaplayer.cpp:340
#14 0x411f486c in QMetaObject::activate (sender=0x470cee88, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=0xbeae2e74) at kernel/qobject.cpp:3479
#15 0x426cf778 in QMediaPlayerControl::error (this=<optimized out>, _t1=1114437496, _t2=...) at .moc/release-shared/moc_qmediaplayercontrol.cpp:396
#16 0x426cfdb0 in QMediaPlayerControl::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=13, _a=<optimized out>) at .moc/release-shared/moc_qmediaplayercontrol.cpp:147
#17 0x411f486c in QMetaObject::activate (sender=0x4121c874 <QUtf8::convertToUnicode(char const*, int, QTextCodec::ConverterState*)+408>, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=0xbeae2f7c) at kernel/qobject.cpp:3479
#18 0x41b5b708 in QGstreamerPlayerSession::error (this=<optimized out>, _t1=1102427912, _t2=...) at .moc/release-shared/moc_qgstreamerplayersession.cpp:481
#19 0x41b54988 in processInvalidMedia (this=0x44409798, errorCode=<optimized out>, errorString=...) at qgstreamerplayersession.cpp:1656
#20 QGstreamerPlayerSession::processInvalidMedia (this=0x44409798, errorCode=QMediaPlayer::ResourceError, errorString=...) at qgstreamerplayersession.cpp:1649
#21 0x41b54f70 in QGstreamerPlayerSession::processBusMessage (this=0x44409798, message=...) at qgstreamerplayersession.cpp:1221
#22 0x41a4bb7c in doProcessMessage (msg=..., this=0x470e82d8) at qgstreamerbushelper.cpp:127
#23 QGstreamerBusHelperPrivate::qt_static_metacall (_o=0x470e82d8, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/release-shared/qgstreamerbushelper.moc:74
#24 0x411f203c in placeMetaCall (object=0x470e82d8, this=0x4c39be10) at kernel/qobject.cpp:479
#25 QMetaCallEvent::placeMetaCall (this=0x4c39be10, object=0x470e82d8) at kernel/qobject.cpp:474
#26 0x411f857c in QObject::event (this=0x470e82d8, e=<optimized out>) at kernel/qobject.cpp:1070
For Gerrit Dashboard: QTBUG-40513 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
91177,2 | QMediaNetworkPlaylistProvider: Upon error parsing, stop parsing. | dev | qt/qtmultimedia | Status: ABANDONED | +2 | 0 |
91252,1 | QMediaNetworkPlaylistProvider: Upon error parsing, stop parsing. | 5.3 | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |
91253,3 | QMediaNetworkPlaylistProvider: Upon error parsing, stop parsing. | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
93492,4 | QMediaNetworkPlaylistProvider: Upon error parsing, stop parsing. | 5.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |