src/multimedia/playback/qmedianetworkplaylistprovider.cpp
@@ -90,6 +90,8 @@ void QMediaNetworkPlaylistProviderPrivate::_q_handleParserError(QPlaylistFilePar
         break;
     }
 
+    parser.stop();
+
     emit q->loadFailed(playlistError, errorMessage);
 }
 
