tests/auto/unit/qmediaplaylist/testdata/test.pls
@@ -1,0 +1,10 @@
+[playlist]
+
+File1=http://test.host/path
+Title1=First
+Length1=-1
+File2= http://test.host/path
+Title2=Second
+Length2=-1
+
+NumberOfEntries=2
